Search bar now aligns correctly

--- a/C5-Note/src/Pages/Search.css
+++ b/C5-Note/src/Pages/Search.css
@@ -1,12 +1,12 @@
 .Search_Div{
     display: flex;
     flex-direction: row;
-    width: 9.5rem;
+    width: 100%;
 }
 
 .search_bar{
     height: 2rem;
-    width: 6rem;
+    width: 70%;
     background-color: #9D9D9D;
     columns: #FFFFFF;
     font-family: monofonto;
@@ -19,7 +19,7 @@
 .search_button{
     
     height: 2.125rem;
-    width: 3.25rem;
+    width: 30%;
     font-family: monofonto;
     background-color: #4882ff;
     font-size: .85rem;
