--- a/C5-Note/src/Pages/simple_note.css
+++ b/C5-Note/src/Pages/simple_note.css
@@ -2,12 +2,12 @@
     width: 5rem;
     height: 5rem;
     border-radius: 10rem;
-    
-
 }
 
 .profile_div_color{
     background-color: #D9D9D9;
+    display: flex;
+    flex-direction: column;
     padding-right: 2rem;
     padding-top: 2rem;
     padding-left: 2rem ;
@@ -15,14 +15,13 @@
 }
 
 .profile_div{
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 3rem;
-    padding-top: 2rem;
     font-family: monofonto;
     font-size: 1rem;
-    padding-bottom: .1rem;
-    
+    width: 11rem;
+    display: flex;
+    flex-direction: column;
+    margin-right: 6%;
+    margin-top: 4%;
 }
 
 .mainBody{
